update index page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
           <h1 class="alt">Fine Art Photography by John Tajima</h1>          
         </div>
       </div>
+
+      <div class="col-12 first">
+        <p style='text-align:center'>
+          View my work on <a href='https://flickr.com/redronin'>Flickr</a>&nbsp; and &nbsp;<a href="https://500px.com/johntajima">500PX</a>
+        </p>
+      </div>        
     </div>
+
   </div> 
 
   <div class="frame" id="footer-frame"> 
